argocd/kustomize/n8n/base/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: n8n
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - n8n.dev.falkordb.cloud
      secretName: n8n-tls
  rules:
    - host: n8n.dev.falkordb.cloud
      http:
        paths:
          - path: /webhook
            pathType: Prefix
            backend:
              service:
                name: n8n-webhook
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  name: http
